--- a/hex_files_2020_12_07/changelog.txt
+++ b/hex_files_2020_12_07/changelog.txt
@@ -1,7 +1,7 @@
 Differences from OS:
 from lockout, 2 clicks to unlock the light.
 from lockout, 2 click-hold to unlock at ramp floor.
-from lockout, 3 click-hold to unlock at ramp ceiling.
+from lockout, 3 clicks to unlock at ramp ceiling.
 from off and ramp mode, 3 clicks to lock.
 from off, 4 clicks to do battery check.
 from ramp mode, 4 clicks to change ramp setting (smooth vs stepped).
