--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
+2020-12-27
+remove party and bike strobe, candle and lightning only.
+
 2020-12-22
-default start in advanced UI, not simple UI
+default start in advanced UI, not simple UI.
 
 2020-12-21
 config USE_UNLOCK_FROM_OFF, use Anduril 1 behavior to unlock to off state.
