--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2020-12-28
+default floor 2 for smooth and stepped ramp for kr4 and kr4-no-fet.
+default aux for off to high-voltage, lockout to low-voltage.
+
 2020-12-27
 remove party and bike strobe, candle and lightning only.
 
