default floor of 3 for kr4 and kr4-nofet

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2021-02-08
+default floor 3 for smooth and stepped ramp for kr4 and kr4-nofet.
+
 2021-02-05
 default autolock off.
 add Noctigon K9.3.
