--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2021-03-15
+added MF01S to `flash-light.sh` option.
+
 2021-02-08
 default floor 3 for smooth and stepped ramp for kr4 and kr4-nofet.
 
