--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,5 @@
-2021-03-25
-added BLF LT1 to `flash-light.sh` option.
-
-2021-03-15
-added MF01S to `flash-light.sh` option.
+2021-10-12
+catch up to open source Anduril 2, rev 624
 
 2021-02-08
 default floor 3 for smooth and stepped ramp for kr4 and kr4-nofet.
