--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2022-01-06
+default to tint switch, not tint ramp.
+catch up to open source rev 642.
+
 2021-11-25
 in tint ramp, 4H to go to middle of tint ramp.
 
